[Add] Add column removal step to preprocessing

--- a/analyze_splatoon_playdata.ipynb
+++ b/analyze_splatoon_playdata.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "ba58eafc",
    "metadata": {},
    "outputs": [],
@@ -20752,7 +20752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "id": "324b2b10",
    "metadata": {},
    "outputs": [],
@@ -20773,7 +20773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "f009d327",
    "metadata": {},
    "outputs": [
@@ -26007,7 +26007,7 @@
        "808                     11                相手インク影響軽減          NaN               "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26046,7 +26046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "12e8c696",
    "metadata": {
     "scrolled": true
@@ -26545,7 +26545,7 @@
        "2072   \"※てっ¥にできる？¥\"   91c8266cc727cf07  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26556,7 +26556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "id": "5bb0e408",
    "metadata": {},
    "outputs": [
@@ -26578,7 +26578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 15,
    "id": "c4876f31",
    "metadata": {},
    "outputs": [],
@@ -26590,7 +26590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 16,
    "id": "ebfc83e9",
    "metadata": {},
    "outputs": [
@@ -34321,7 +34321,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2486 rows × 639 columns</p>\n",
+       "<p>2485 rows × 639 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -36938,16 +36938,71 @@
        "2484                  サブ性能アップ          NaN          NaN  \n",
        "2485                                   NaN          NaN  \n",
        "\n",
-       "[2486 rows x 639 columns]"
+       "[2485 rows x 639 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aff8e8c3",
+   "metadata": {},
+   "source": [
+    "### 不要な列の削除"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "0b18f5ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['no', 'win', 'gameRule', 'playerRank', 'playerUdemae', 'playerKill', 'playerDeath', 'playerAssist', 'playerSpecial', 'playerPaintPoint', 'alpha1Rank', 'alpha1Udemae', 'alpha1Kill', 'alpha1Death', 'alpha1Assist', 'alpha1Special', 'alpha1PaintPoint', 'alpha2Rank', 'alpha2Udemae', 'alpha2Kill', 'alpha2Death', 'alpha2Assist', 'alpha2Special', 'alpha2PaintPoint', 'alpha3Rank', 'alpha3Udemae', 'alpha3Kill', 'alpha3Death', 'alpha3Assist', 'alpha3Special', 'alpha3PaintPoint', 'bravo1Rank', 'bravo1Udemae', 'bravo1Kill', 'bravo1Death', 'bravo1Assist', 'bravo1Special', 'bravo1PaintPoint', 'bravo2Rank', 'bravo2Udemae', 'bravo2Kill', 'bravo2Death', 'bravo2Assist', 'bravo2Special', 'bravo2PaintPoint', 'bravo3Rank', 'bravo3Udemae', 'bravo3Kill', 'bravo3Death', 'bravo3Assist', 'bravo3Special', 'bravo3PaintPoint', 'bravo4Rank', 'bravo4Udemae', 'bravo4Kill', 'bravo4Death', 'bravo4Assist', 'bravo4Special', 'bravo4PaintPoint']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 使わないカラムを削除（例: 試合情報、武器・ギアデータ）\n",
+    "drop_columns = [\n",
+    "    'startTime', 'elapsedTime', 'udemae', 'udemaeIsX', 'udemaeIsReached', 'sPlusNumber',\n",
+    "    'xRanking', 'xPower', 'myCount', 'otherCount', 'winMeter', 'weaponPaintPoint', 'leaguePoint',\n",
+    "    'leagueMaxPoint', 'leagueTeamEstimatePoint', 'leagueOtherEstimatePoint', 'gachiEstimatePower',\n",
+    "    'gachiEstimateXPower', 'fesPoint', 'fesPower', 'fesMaxPower', 'fesTeamEstimatePower', 'fesOtherEstimatePower',\n",
+    "    'stageID', 'gameKey', 'gameMode', 'gameModeKey', 'gameRuleKey', 'gameType', 'fesID',\n",
+    "    'fesMyTheme', 'fesMyThemeKey', 'fesOtherTheme', 'fesOtherThemeKey', 'fesMyColorR', 'fesMyColorG',\n",
+    "    'fesMyColorB', 'fesOtherColorR', 'fesOtherColorG', 'fesOtherColorB', \n",
+    "    'Name', 'udemaeName', 'SPlusNumber', 'UdemaeIsX', 'UdemaeIsReached',\n",
+    "    'IsCrown', 'StarRank', 'Ratio', 'AllKill', 'SortScore',\n",
+    "    'FesGrade', 'FesGradeName', 'WeaponID', 'WeaponName', 'WeaponSpecialID', 'WeaponSpecialName',\n",
+    "    'WeaponSubID', 'WeaponSubName', 'HeadID', 'HeadName', 'HeadRarity', 'HeadKind', 'HeadBrandID',\n",
+    "    'HeadBrandName', 'HeadBrandFrequentSkillID', 'HeadBrandFrequentSkillName', 'HeadSkillID', 'HeadSkillName',\n",
+    "    'HeadSub1SkillID', 'HeadSub1SkillName', 'HeadSub2SkillID', 'HeadSub2SkillName', 'HeadSub3SkillID', 'HeadSub3SkillName',\n",
+    "    'ClothesID', 'ClothesName', 'ClothesRarity', 'ClothesKind', 'ClothesBrandID', 'ClothesBrandName',\n",
+    "    'ClothesBrandFrequentSkillID', 'ClothesBrandFrequentSkillName', 'ClothesSkillID', 'ClothesSkillName',\n",
+    "    'ClothesSub1SkillID', 'ClothesSub1SkillName', 'ClothesSub2SkillID', 'ClothesSub2SkillName', 'ClothesSub3SkillID', 'ClothesSub3SkillName',\n",
+    "    'ShoesID', 'ShoesName', 'ShoesRarity', 'ShoesKind', 'ShoesBrandID', 'ShoesBrandName', 'ShoesBrandFrequentSkillID',\n",
+    "    'ShoesBrandFrequentSkillName', 'ShoesSkillID', 'ShoesSkillName', 'ShoesSub1SkillID', 'ShoesSub1SkillName',\n",
+    "    'ShoesSub2SkillID', 'ShoesSub2SkillName', 'ShoesSub3SkillID', 'ShoesSub3SkillName',\n",
+    "    'Unnamed: 637', 'Unnamed: 638', \"PrincipalID\"\n",
+    "]\n",
+    "\n",
+    "# drop_columns に含まれる文字列を含むカラムを削除\n",
+    "columns_to_drop = [col for col in data.columns if any(drop in col for drop in drop_columns)]\n",
+    "data_dropped = data.drop(columns=columns_to_drop)\n",
+    "\n",
+    "# 削除後のカラムを確認\n",
+    "print(list(data_dropped.columns))"
    ]
   }
  ],
