[Add] Add data type conversion step to preprocessing

--- a/analyze_splatoon_playdata.ipynb
+++ b/analyze_splatoon_playdata.ipynb
@@ -26416,7 +26416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "ebfc83e9",
    "metadata": {},
    "outputs": [
@@ -31650,7 +31650,7 @@
        "4                     11                相手インク影響軽減          NaN          NaN  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31669,7 +31669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "0b18f5ac",
    "metadata": {},
    "outputs": [
@@ -31738,7 +31738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "df76a02b",
    "metadata": {},
    "outputs": [
@@ -32107,7 +32107,7 @@
        "19         6     -1  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32152,7 +32152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "16c5aca2",
    "metadata": {},
    "outputs": [
@@ -32361,7 +32361,7 @@
        "10         2     -1  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32382,7 +32382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "id": "d023deae",
    "metadata": {},
    "outputs": [
@@ -32511,7 +32511,7 @@
        "642                  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32527,10 +32527,11 @@
     "    except ValueError:\n",
     "        return True  # 変換できなかったら数値でない\n",
     "\n",
+    "# 数値が入っている列名リスト\n",
+    "numeric_columns = [\"win\", \"Assist\", \"Death\", \"Kill\", \"PaintPoint\", \"Rank\", \"Special\", \"Udemae\"]\n",
+    "\n",
     "# 各列が数値でないかどうかを判定\n",
-    "non_numeric = long_data_dropped[\n",
-    "    [\"win\", \"Assist\", \"Death\", \"Kill\", \"PaintPoint\", \"Rank\", \"Special\", \"Udemae\"]\n",
-    "].applymap(is_not_numeric)\n",
+    "non_numeric = long_data_dropped[numeric_columns].applymap(is_not_numeric)\n",
     "\n",
     "# 数値でないデータを含む行を抽出\n",
     "non_numeric_rows = long_data_dropped[non_numeric.any(axis=1)]\n",
@@ -32541,7 +32542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "id": "6ff15e67",
    "metadata": {},
    "outputs": [
@@ -32549,9 +32550,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(17395, 11)\n",
-      "(294, 11)\n",
-      "(17101, 11)\n"
+      "元のデータサイズ: (17395, 11)\n",
+      "数値でないデータの数: (294, 11)\n",
+      "クリーンデータサイズ: (17101, 11)\n"
      ]
     }
    ],
@@ -32560,18 +32561,54 @@
     "long_data_cleaned = long_data_dropped.drop(non_numeric_rows.index)\n",
     "\n",
     "# 結果を確認\n",
-    "print(long_data_dropped.shape) # 元のデータの形\n",
-    "print(non_numeric_rows.shape) # 間違ったデータの形\n",
-    "print(long_data_cleaned.shape) # 現在のデータの形"
+    "print(\"元のデータサイズ:\", long_data_dropped.shape)  # 元のデータの形\n",
+    "print(\"数値でないデータの数:\", non_numeric_rows.shape)  # 間違ったデータの形\n",
+    "print(\"クリーンデータサイズ:\", long_data_cleaned.shape)  # 現在のデータの形"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b58245f",
+   "metadata": {},
+   "source": [
+    "### データ型の変換"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "55ec67aa",
+   "execution_count": 30,
+   "id": "1b455222",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NaNの数:\n",
+      "stat\n",
+      "no             0\n",
+      "win            0\n",
+      "gameRule       0\n",
+      "player_type    0\n",
+      "Assist         0\n",
+      "Death          0\n",
+      "Kill           0\n",
+      "PaintPoint     0\n",
+      "Rank           0\n",
+      "Special        0\n",
+      "Udemae         0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# データ型を数値型に変換し、変換できない値は NaN にする\n",
+    "long_data_cleaned[numeric_columns] = long_data_cleaned[numeric_columns].apply(pd.to_numeric, errors=\"coerce\")\n",
+    "\n",
+    "# NaNがないことを確認\n",
+    "print(\"NaNの数:\")\n",
+    "print(long_data_cleaned.isnull().sum())"
+   ]
   }
  ],
  "metadata": {
